syntax = "proto3";


// Add Wallet Record
message AddWalletRecordRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
	string Value = 4;
	string TagsJson = 5;
}
message AddWalletRecordResponse{
	string Resp = 1;
}

// Update Wallet Record Value
message UpdateWalletRecordValueRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
	string value = 4;
}
message UpdateWalletRecordValueResponse{
	string Resp = 1;
}


// Update Wallet Record Tags
message UpdateWalletRecordTagsRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
	string TagsJson = 4;
}
message UpdateWalletRecordTagsResponse{
	string Resp = 1;
}

// Add Wallet Record Tags
message AddWalletRecordTagsRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
	string TagsJson = 4;
}
message AddWalletRecordTagsResponse{
	string Resp = 1;
}

// Delete Wallet Record Tags
message DeleteWalletRecordTagsRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
	string TagNamesJson = 4;
}

message DeleteWalletRecordTagsResponse{
	string Resp = 1;
}

// Delete Wallet Record
message DeleteWalletRecordRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id_ = 3;
}

message DeleteWalletRecordResponse{
	string Resp = 1;
}

// Get Wallet Record
message GetWalletRecordRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string Id = 3;
	string OptionsJson = 4;
}
message GetWalletRecordResponse{
	string Resp = 1;
}

// Open Wallet Searfeat			ch
message OpenWalletSearchRequest{
	int64 WalletHandle = 1;
	string Type_ = 2;
	string QueryJson = 3;
	string OptionsJson = 4;	
}
message OpenWalletSearchResponse{
	int64 SearchHandle = 1;
}

// Fetch Wallet Search Next Records
message FetchWalletSearchNextRecordsRequest{
	int64 WalletHandle = 1;
	int64 WalletSearchHandle = 2;
	int64 Count = 3;
}
message FetchWalletSearchNextRecordsResponse{
	string WalletRecordsJson = 1;
}


// Close Wallet Search
message CloseWalletSearchRequest{
	int64 WalletSearchHandle = 1;
}
message CloseWalletSearchResponse{
	string Resp = 1;
}